Restructure licenses, add singleton endpoint, accept string licenses